--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "author": "Maud Gautier",
   "main": "src/index.ts",
   "scripts": {
-    "test": "jest --watch --coverage"
+    "test": "jest --watch --coverage",
+    "tsc": "tsc"
   },
+  "type": "module",
   "devDependencies": {
     "@types/jest": "^29.5.1",
     "jest": "^29.5.0",
